[package]
name = "mk64f12-hal"
version = "0.1.0"
edition = "2021"

[dependencies]
critical-section = { version = "1.1.1", optional = true }
cortex-m = { version="0.7.6", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.1"
vcell = "0.1.2"

panic-halt = "0.2.0"

[features]
default = ["rt"]
rt = ["cortex-m-rt/device", "critical-section"]

[[example]]
name = "blinky"
required-features = ["rt"]
